[gd_scene load_steps=19 format=3 uid="uid://cu6i4ku1ruqin"]

[ext_resource type="Script" path="res://scripts/upgrades.gd" id="1_gagf1"]
[ext_resource type="Texture2D" uid="uid://to4wv1hcu7o2" path="res://assets/towerDefense_tilesheet@1.png" id="2_e187h"]
[ext_resource type="LabelSettings" uid="uid://cadtaiwa2eo80" path="res://assets/Fonts/label setting.tres" id="3_pnyjo"]
[ext_resource type="Texture2D" uid="uid://c6qf2ycxqek1t" path="res://assets/Double/rotate_cw.png" id="4_rqlod"]
[ext_resource type="Texture2D" uid="uid://dnwff4owfv160" path="res://assets/Double/arrow_n.png" id="4_yukm8"]
[ext_resource type="FontFile" uid="uid://b7jvr41u6swsj" path="res://assets/Fonts/Kenney Future Narrow.ttf" id="5_xk3xb"]
[ext_resource type="Texture2D" uid="uid://buttx5chaswa6" path="res://assets/Double/resize_c_diagonal_mirror.png" id="6_eadr4"]
[ext_resource type="Texture2D" uid="uid://dfggqnwvmep2e" path="res://assets/Double/tool_sword_a.png" id="7_x6m71"]
[ext_resource type="AudioStream" uid="uid://dx4c2j2hv2c84" path="res://audio/sfx/JDSherbert - Ultimate UI SFX Pack - Popup Open - 1.wav" id="9_bq5nc"]
[ext_resource type="AudioStream" uid="uid://brgk2uwh7v11f" path="res://audio/sfx/JDSherbert - Ultimate UI SFX Pack - Popup Close - 1.wav" id="10_8ld66"]
[ext_resource type="AudioStream" uid="uid://boa1mgcsn1p3k" path="res://audio/sfx/JDSherbert - Ultimate UI SFX Pack - Select - 1.wav" id="11_y4qoj"]

[sub_resource type="LabelSettings" id="LabelSettings_pbuw8"]
font = ExtResource("5_xk3xb")
font_size = 42

[sub_resource type="Gradient" id="Gradient_p5gs3"]
offsets = PackedFloat32Array(0.286154, 0.664615)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.494118)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mim5k"]
gradient = SubResource("Gradient_p5gs3")
width = 1281
height = 1281
fill = 1
fill_from = Vector2(0.454128, 0.37156)
fill_to = Vector2(0.779817, 0.889908)

[sub_resource type="LabelSettings" id="LabelSettings_2c21c"]
font = ExtResource("5_xk3xb")
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_egs88"]
font = ExtResource("5_xk3xb")
font_size = 9

[sub_resource type="LabelSettings" id="LabelSettings_2kd2q"]
font = ExtResource("5_xk3xb")
font_size = 51

[sub_resource type="LabelSettings" id="LabelSettings_xm7ek"]
font = ExtResource("5_xk3xb")
font_size = 47

[node name="UI" type="Node2D"]
process_mode = 3
z_index = 20
scale = Vector2(1.5, 1.5)
script = ExtResource("1_gagf1")

[node name="Level" type="Label" parent="."]
layout_direction = 3
offset_left = -688.0
offset_top = 32.0
offset_right = -508.0
offset_bottom = 90.0
text = "LEVEL"
label_settings = SubResource("LabelSettings_pbuw8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(64, 64)
scale = Vector2(2, 2)
texture = ExtResource("2_e187h")
region_enabled = true
region_rect = Rect2(2432, 1408, 128, 128)

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(360, 639.667)
texture = SubResource("GradientTexture2D_mim5k")

[node name="Coins" type="Label" parent="."]
process_mode = 3
offset_left = 32.0
offset_top = 96.0
offset_right = 104.0
offset_bottom = 140.0
text = "12"
label_settings = SubResource("LabelSettings_2c21c")
horizontal_alignment = 1

[node name="Popup" type="TextureButton" parent="."]
process_mode = 3
z_index = 1
offset_left = 32.0
offset_top = 160.0
offset_right = 96.0
offset_bottom = 224.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("4_yukm8")

[node name="Upgrades" type="GridContainer" parent="."]
clip_contents = true
offset_left = 32.0
offset_top = 229.0
offset_right = 575.0
offset_bottom = 702.0
theme_override_constants/h_separation = 15
columns = 2

[node name="Spacer3" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = SubResource("LabelSettings_egs88")
horizontal_alignment = 1

[node name="Spacer10" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = SubResource("LabelSettings_egs88")
horizontal_alignment = 1

[node name="Spacer11" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = SubResource("LabelSettings_egs88")
horizontal_alignment = 1

[node name="PausedText" type="Label" parent="Upgrades"]
layout_mode = 2
text = "Game Paused"
label_settings = SubResource("LabelSettings_2kd2q")

[node name="Spacer" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = SubResource("LabelSettings_egs88")
horizontal_alignment = 1

[node name="Spacer2" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = SubResource("LabelSettings_xm7ek")
horizontal_alignment = 1

[node name="TurnSpeed" type="TextureButton" parent="Upgrades"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("4_rqlod")
stretch_mode = 3
flip_v = true

[node name="tsCost" type="Label" parent="Upgrades/TurnSpeed"]
layout_mode = 2
offset_left = 79.0
offset_top = 14.0
offset_right = 529.0
offset_bottom = 50.0
mouse_filter = 1
text = "turn Speed - 10 coins"
label_settings = ExtResource("3_pnyjo")

[node name="Spacer4" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer5" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer6" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Damage" type="TextureButton" parent="Upgrades"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("7_x6m71")
stretch_mode = 3

[node name="dmgCost" type="Label" parent="Upgrades/Damage"]
layout_mode = 0
offset_left = 79.0
offset_top = 14.0
offset_right = 529.0
offset_bottom = 50.0
mouse_filter = 1
text = "Damage - 10 coins"
label_settings = ExtResource("3_pnyjo")

[node name="Spacer7" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer8" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer9" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="BurstShots" type="TextureButton" parent="Upgrades"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("6_eadr4")
stretch_mode = 3

[node name="bsCost" type="Label" parent="Upgrades/BurstShots"]
layout_mode = 2
offset_left = 79.0
offset_top = 14.0
offset_right = 477.0
offset_bottom = 50.0
mouse_filter = 1
text = "burst shots - 10 coins
"
label_settings = ExtResource("3_pnyjo")

[node name="Spacer12" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer13" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Spacer14" type="Label" parent="Upgrades"]
layout_mode = 2
text = "  "
label_settings = ExtResource("3_pnyjo")
horizontal_alignment = 1

[node name="Health" type="TextureButton" parent="Upgrades"]
z_index = 2
layout_mode = 2
texture_normal = ExtResource("6_eadr4")
stretch_mode = 3

[node name="hpCost" type="Label" parent="Upgrades/Health"]
layout_mode = 2
offset_left = 79.0
offset_top = 14.0
offset_right = 477.0
offset_bottom = 50.0
mouse_filter = 1
text = "burst shots - 10 coins
"
label_settings = ExtResource("3_pnyjo")

[node name="popupopen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_bq5nc")

[node name="popupclose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_8ld66")

[node name="popupselect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_y4qoj")

[connection signal="pressed" from="Popup" to="." method="_on_popup_pressed"]
[connection signal="pressed" from="Upgrades/TurnSpeed" to="." method="_on_turn_speed_pressed"]
[connection signal="pressed" from="Upgrades/Damage" to="." method="_on_shot_cd_pressed"]
[connection signal="pressed" from="Upgrades/BurstShots" to="." method="_on_burst_shots_pressed"]
[connection signal="pressed" from="Upgrades/Health" to="." method="_on_health_pressed"]
